# vroad-lanetr

./: LICENSE  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
_contract/: config_schema.json  metrics_spec.json  model_info.json
configs/: lanetr_culane.yaml
conformance/: test_contract.py
lanetr/: __init__.py
lanetr/contract/: build.py  spec.py  visualizers.py
lanetr/data/: __init__.py  format.py  target_encoding.py  transforms.py
lanetr/losses/: criterion.py  lane_iou.py  matcher.py
lanetr/models/: anchors.py  backbone.py  decoder.py  deform_attn.py  fpn.py  frozen_bn.py  head.py  lanetr.py
tests/: test_format.py  test_losses.py  test_models.py  test_target_encoding.py  test_transforms.py
tools/: export_contract.py
